log
Fri, May  2, 2025 11:04:37 PM: 
 tests:  1|8
total_score: 0/70
5729e4d
Sat, May  3, 2025  5:34:25 PM: 
 treemap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  1|8
total_score: 0/70
09d48f4
Sat, May  3, 2025  5:36:22 PM: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|8
total_score: 0/70
5f1699f
Sat, May  3, 2025  5:36:49 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
d637dd1
Sat, May  3, 2025  5:40:43 PM: 
 treemap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  4|7
total_score: 5/70
9e6736c
Sat, May  3, 2025  5:47:19 PM: 
 treemap.c | 19 +++++++++++++++++--
 1 file changed, 17 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:97:11: error: 'nod' undeclared (first use in this function)
     while(nod!=NULL)
           ^~~
treemap.c:97:11: note: each undeclared identifier is reported only once for each function it appears in
4ada1f1
Sat, May  3, 2025  5:47:34 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
be3cca6
Sat, May  3, 2025  5:48:16 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
8869f55
Sat, May  3, 2025  5:50:49 PM: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  6|7
total_score: 5/70
80355ae
Sat, May  3, 2025  5:53:01 PM: 
 treemap.c | 22 +++++++++++++++++++++-
 1 file changed, 21 insertions(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
3c66480
Sat, May  3, 2025  5:54:04 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
ce6b034
Sat, May  3, 2025  5:54:28 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
7a1bd57
Sat, May  3, 2025  5:54:52 PM: 
 treemap.c | 23 -----------------------
 1 file changed, 23 deletions(-)
 tests:  11|6
total_score: 15/70
bce6f39
Sat, May  3, 2025  5:59:00 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
7cb729b
Sat, May  3, 2025  5:59:19 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
49d7d4b
Sat, May  3, 2025  6:23:14 PM: 
 treemap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  11|6
total_score: 15/70
b59c2d8
Sat, May  3, 2025  7:37:05 PM: 
 treemap.c | 38 ++++++++++++++++++++++++++++++++++++--
 1 file changed, 36 insertions(+), 2 deletions(-)
 tests:  13|5
total_score: 25/70
06b1115
Sat, May  3, 2025  7:37:35 PM: 
 treemap.c | 31 -------------------------------
 1 file changed, 31 deletions(-)
 tests:  11|6
total_score: 15/70
67e2f9f
Sun, May  4, 2025  7:09:25 PM: 
 treemap.c | 21 +++++++++++++++++++--
 1 file changed, 19 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:86:16: error: unused variable 'newNode' [-Werror=unused-variable]
     TreeNode * newNode = createTreeNode(key, value);
                ^~~~~~~
treemap.c:74:15: error: variable 'parent' set but not used [-Werror=unused-but-set-variable]
     TreeNode *parent =NULL;
               ^~~~~~
cc1.exe: all warnings being treated as errors
2b101b3
Sun, May  4, 2025  7:09:37 PM: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:76:11: error: 'node' undeclared (first use in this function)
     while(node != NULL) {
           ^~~~
treemap.c:76:11: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:77:9: error: 'parent' undeclared (first use in this function)
         parent = node;
         ^~~~~~
treemap.c:84:16: error: unused variable 'newNode' [-Werror=unused-variable]
     TreeNode * newNode = createTreeNode(key, value);
                ^~~~~~~
cc1.exe: all warnings being treated as errors
fe0b692
Sun, May  4, 2025  7:10:04 PM: 
 treemap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:76:11: error: 'node' undeclared (first use in this function)
     while(node != NULL) {
           ^~~~
treemap.c:76:11: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:77:9: error: 'parent' undeclared (first use in this function)
         parent = node;
         ^~~~~~
467ac6a
Sun, May  4, 2025  7:12:07 PM: 
 treemap.c | 21 +++++++++------------
 1 file changed, 9 insertions(+), 12 deletions(-)
 tests:  13|5
total_score: 25/70
8d06a97
Sun, May  4, 2025  7:13:56 PM: 
 treemap.c | 265 +++++++++++++++++++++++++++++++++++++++++---------------------
 1 file changed, 177 insertions(+), 88 deletions(-)
 tests:  29|0
total_score: 70/70
5dae141
Sun, May  4, 2025  7:14:27 PM: 
 treemap.c | 265 +++++++++++++++++++++-----------------------------------------
 1 file changed, 88 insertions(+), 177 deletions(-)
 tests:  13|5
total_score: 25/70
b538d36
Sun, May  4, 2025  7:19:27 PM: 
 treemap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  15|4
total_score: 25/70
26c5f92
Sun, May  4, 2025  7:31:52 PM: 
 treemap.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
 tests:  16|4
total_score: 30/70
50b6b63
